fixed project. Now displaying stars based off counter

--- a/index.html
+++ b/index.html
@@ -11,11 +11,13 @@
 
     </div>
     <div class="calc-screen-holder">
+        <button class="button" id="add">+</button>
         <div class="calc-screen">
             <h1 id="total"></h1>
         </div>
+        <button class="button" id="subtract">-</button>
     </div>
-    <div id="buttons">
+    <div id="stars">
         
     </div>
 
