--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="navbar">
-
+        <h1>Counter-Stars</h1>
     </div>
     <div class="calc-screen-holder">
         <button class="button" id="add">+</button>
